--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,7 @@
   color: #999 !important;
 }
 a.bctt-ctt-btn {
+  border-bottom: none;
   margin: 0;
   padding: 11px 24px 0 0;
   position: relative;
